# data-science

./: README.md  angreal.toml  mkdocs.yml
docs/: index.md
docs/architecture/: configuration.md  core-components.md  directory-structure.md  optional-components.md  overview.md
docs/explanation/: design-decisions.md  epoch-based-development.md  extending.md  index.md
docs/how-to/: adding-epochs.md  getting-started.md  index.md
docs/reference/: command-reference.md  index.md  project-structure.md
{{ project_slug }}/: .gitignore  .pre-commit-config.yaml  .yamllint-config.yml  README.md  mkdocs.yml  pyproject.toml
{{ project_slug }}/.angreal/: init.py  task_documentation.py  task_new.py  task_new_model.py  task_test.py  task_tests.py
{{ project_slug }}/.angreal/templates/: README.md
{{ project_slug }}/.angreal/templates/database/: __init__.py  alembic.ini  db.py  models.py
{{ project_slug }}/.angreal/templates/database/migrations/: env.py
{{ project_slug }}/.angreal/templates/database/models/: __init__.py  base.py  model.py
{{ project_slug }}/.angreal/templates/deployment/: app.sh
{{ project_slug }}/.angreal/templates/notebooks/: epoch_readme.md  notebook_template.ipynb
{{ project_slug }}/docs/: index.md
{{ project_slug }}/docs/explanation/: index.md
{{ project_slug }}/docs/how-to/: index.md
{{ project_slug }}/docs/reference/: index.md
{{ project_slug }}/docs/reference/api/: index.md
{{ project_slug }}/docs/tutorials/: getting-started.md
{{ project_slug }}/notebooks/: README.md
{{ project_slug }}/notebooks/epoch_001/: README.md
{{ project_slug }}/notebooks/templates/: README.md  notebook_template.ipynb
{{ project_slug }}/src/{{ package_name }}/core/: __init__.py  config.py  settings.py
{{ project_slug }}/src/{{ package_name }}/data/: __init__.py
{{ project_slug }}/src/{{ package_name }}/models/: __init__.py
{{ project_slug }}/src/{{ package_name }}/pipelines/: __init__.py
{{ project_slug }}/src/{{ package_name }}/utils/: __init__.py  notebook.py
{{ project_slug }}/tests/: README.md  conftest.py
{{ project_slug }}/tests/unit/: example_test.py
